@@ -15,6 +15,7 @@ Version 0.9.22
        * #563 Custom UI for invitation UI.
        * #614 OnRoomConnected() getting called twice after implementing ShowWaitingRoomUI
        * #617 Get all turn-based matches
+       * #619 NO_GPGS does not work with Symlink Unity libraries
 Version 0.9.21
   **BREAKING CHANGES**
        * #382 Callback for declined invitation when creating RTMP room
